# CoreDEX

./: .gitignore  CROSS_VM_ARCHITECTURE.md  README.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/constants/: index.ts
frontend/contexts/: OverlayContext.tsx
frontend/hooks/: useEstimatedRelayBlock.ts  useForwardOrders.ts  useHubTransactionReceipt.ts  useLedger.ts  useMintCoretimeRegion.ts  useOptions.ts  useOracleSpot.ts  useOwnedCoretimeRegions.ts  useProtocolStatus.ts  useVault.ts
frontend/lib/: contracts.ts  coretimeNft.ts  decodeEvmStructs.ts  explorer.ts  optionOnChainUi.ts  parseMintedNftFromReceipt.ts  relayBlockEstimate.ts  txGas.ts  txReceipt.ts  utils.ts  vaultBorrow.ts  wagmi.config.ts  wagmiQueryInvalidate.ts  walletError.ts
frontend/providers/: QueryProvider.tsx  WalletProvider.tsx
frontend/types/: contracts.ts  protocol.ts
pvm-modules/: ARCHITECTURE.md  Cargo.toml  README.md
pvm-modules/src/: abi.rs  coretime_oracle.rs  lib.rs  precompile_set.rs  pricing_module.rs  tests.rs
pvm-modules/src/precompiles/: coretime_oracle_precompile.rs  mod.rs  pricing_module_precompile.rs
smart-contracts/: README.md  chopsticks.yml  deployed-addresses.json  hardhat.config.ts  package-lock.json  package.json  pvm-testnet-addresses.json  tsconfig.json
smart-contracts/contracts/: CoreDexRegistry.sol  CoretimeLedger.sol  ForwardMarket.sol  OptionsEngine.sol  SettlementExecutor.sol  YieldVault.sol
smart-contracts/rust-contracts/: ARCHITECTURE.md  Cargo.toml  README.md  coretime_nft.polkavm  coretime_oracle.polkavm  mock_assets.polkavm  package.json  pricing_module.polkavm
smart-contracts/rust-contracts/src/: coretime_nft.rs  coretime_oracle.rs  mock_assets.rs  pricing_module.rs
smart-contracts/scripts/: debug-buyoption.ts  debug-contract-call.ts  deploy-pvm-mocks.ts  deploy-pvm-testnet.ts  deploy.ts  redeploy-with-pvm.ts  simulate-coredex.ts  test-coredex-flow.ts  test-forwardmarket.ts  (+8 more)
(+81 files in other folders)
